--- a/docs.yaml
+++ b/docs.yaml
@@ -2,20 +2,24 @@ swagger: '2.0'
 info:
   title: Tec3 API
   version: '1.0.0'
+  description:
+    Tec3 API is a straightforward REST API with authentication written in JavaScript and using Docker, Express, Joi, Knex, Supabase and Passport.
+    <br><br>
+    [Visit the GitHub repository](https://github.com/tec3org/tec3-api)
 produces:
   - application/json
 tags:
-  - name: health
-  - name: register
-  - name: login
-  - name: users
-  - name: utils
+  - name: Health
+  - name: Register
+  - name: Login
+  - name: Users
+  - name: Utils
 paths:
   /:
     get:
       summary: Health Check
       tags:
-        - health
+        - Health
       responses:
         '200':
           description: OK
@@ -45,7 +49,7 @@ paths:
     post:
       summary: Register
       tags:
-        - register
+        - Register
       parameters:
         - in: body
           name: info
@@ -119,7 +123,7 @@ paths:
     post:
       summary: Login
       tags:
-        - login
+        - Login
       parameters:
         - in: body
           name: credentials
@@ -153,7 +157,7 @@ paths:
     get:
       summary: Get all users
       tags:
-        - users
+        - Users
       parameters:
         - in: header
           name: cookie
@@ -202,7 +206,7 @@ paths:
     get:
       summary: Get a user by ID
       tags:
-        - users
+        - Users
       parameters:
         - in: path
           name: id
@@ -255,7 +259,7 @@ paths:
     patch:
       summary: Update a user by ID
       tags:
-        - users
+        - Users
       parameters:
         - in: path
           name: id
@@ -311,7 +315,7 @@ paths:
     delete:
       summary: Delete a user by ID
       tags:
-        - users
+        - Users
       parameters:
         - in: path
           name: id
@@ -341,7 +345,7 @@ paths:
     get:
       summary: Generate data using a service
       tags:
-        - utils
+        - Utils
       parameters:
         - in: path
           name: service
@@ -357,7 +361,7 @@ paths:
     post:
       summary: Transform data using a service
       tags:
-        - utils
+        - Utils
       parameters:
         - in: path
           name: service
