--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "description": "",
   "version": "1.0.0",
   "main": "server.js",
+  "keywords": [],
+  "author": "",
+  "license": "MIT",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
@@ -22,9 +25,6 @@
     "db:reset": "npx supabase db reset",
     "setup": "npm run db:pull && npm run db:start && npm run migrations && npm run seeds"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
