--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "js-yaml": "^4.1.0",
     "knex": "^2.4.2",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "pg": "^8.10.0",
