--- a/docs.yaml
+++ b/docs.yaml
@@ -39,12 +39,110 @@ paths:
                 example: 'healthy'
         '500':
           description: Server error
-  /register:
-    post:
-      summary: Register
+  /apps:
+    get:
+      summary: Get all apps
       tags:
-        - Register
+        - Admin
+      parameters:   
+        - in: body
+          name: credentials
+          description: Login credentials
+          required: true
+          schema:
+            type: object
+            properties:
+              email:
+                type: string
+              password:
+                type: string
+      responses:
+        '200':
+          description: OK
+          schema:
+            type: array
+            items:
+              type: object
+              properties:
+                id:
+                  type: string
+                  example: 'string'
+                name:
+                  type: string
+                created_at:
+                  type: string
+                  format: date
+                archived_at:
+                  type: string
+                  format: date
+                logo:
+                  type: string
+                  example: 'string (URL)'
+        '401':
+          description: Unauthorized
+  /apps/{id}:
+    get:
+      summary: Get app by ID
+      tags:
+        - Admin
       parameters:
+        - in: path
+          name: id
+          description: App ID
+          type: string
+          required: true
+        - in: body
+          name: credentials
+          description: Login credentials
+          required: true
+          schema:
+            type: object
+            properties:
+              email:
+                type: string
+              password:
+                type: string
+      responses:
+        '200':
+          description: OK
+          schema:
+            type: object
+            properties:
+              id:
+                type: string
+                example: 'string'
+              name:
+                type: string
+              created_at:
+                type: string
+                format: date
+              archived_at:
+                type: string
+                format: date
+              logo:
+                type: string
+                example: 'string (URL)'
+        '401':
+          description: Unauthorized
+        '404':
+          description: Not Found
+  /apps/{id}/register:
+    post:
+      summary: Create app user account
+      tags:
+        - Access
+      parameters:
+        - in: path
+          name: id
+          description: App ID
+          type: string
+          required: true              
+        - in: header
+          name: authorization
+          description: API Key
+          type: string
+          required: true
+          value: Bearer <API_KEY>
         - in: body
           name: info
           description: User information
@@ -53,6 +151,10 @@ paths:
             type: object
             properties:
               username:
+                type: string
+              first_name:
+                type: string
+              last_name:
                 type: string
               email:
                 type: string
@@ -73,12 +175,6 @@ paths:
                 type: string
               app_id:
                 type: string
-        - in: header
-          name: authorization
-          description: API Key
-          type: string
-          required: true
-          value: Bearer d5f5c5e5a9bc9b714f263b11f63c7bdf
       responses:
         '201':
           description: Created
@@ -93,6 +189,10 @@ paths:
                 type: string
                 example: 'string (hash)'
               username:
+                type: string
+              first_name:
+                type: string
+              last_name:
                 type: string
               email:
                 type: string
@@ -113,12 +213,23 @@ paths:
           description: Bad Request
         '401':
           description: Unauthorized
-  /login:
+  /apps/{id}/login:
     post:
-      summary: Login
+      summary: Login to app
       tags:
-        - Login
+        - Access
       parameters:
+        - in: path
+          name: id
+          description: App ID
+          type: string
+          required: true  
+        - in: header
+          name: authorization
+          description: API Key
+          type: string
+          required: true
+          value: Bearer <API_KEY>
         - in: body
           name: credentials
           description: Login credentials
@@ -130,14 +241,6 @@ paths:
                 type: string
               password:
                 type: string
-              app_id:
-                type: string
-        - in: header
-          name: authorization
-          description: API Key
-          type: string
-          required: true
-          value: Bearer d5f5c5e5a9bc9b714f263b11f63c7bdf
       responses:
         '200':
           description: OK
@@ -147,24 +250,56 @@ paths:
               type: string
         '401':
           description: Unauthorized
-  /users/all:
+  /apps{id}/logout:
+    post:
+        summary: Logout from app
+        tags:
+          - Access
+        parameters:
+          - in: path
+            name: id
+            description: App ID
+            type: string
+            required: true  
+          - in: header
+            name: authorization
+            description: API Key
+            type: string
+            required: true
+            value: Bearer d5f5c5e5a9bc9b714f263b11f63c7bdf
+          - in: header
+            name: cookie
+            type: string
+            required: true
+            description: Authentication cookie from login
+            value: conn.sid=abcdef1234567890
+        responses:
+          '200':
+            description: OK - (Removes cookie from session)
+          '401':
+            description: Unauthorized
+  /apps/{id}/users:
     get:
-      summary: Get all users
+      summary: Get all users from app
       tags:
-        - Users
+        - Admin
       parameters:
-        - in: header
-          name: cookie
+        - in: path
+          name: id
+          description: App ID
           type: string
           required: true
-          description: Authentication cookie from login
-          value: conn.sid=abcdef1234567890
-        - in: header
-          name: authorization
-          description: API Key
-          type: string
+        - in: body
+          name: credentials
+          description: Login credentials
           required: true
-          value: Bearer d5f5c5e5a9bc9b714f263b11f63c7bdf
+          schema:
+            type: object
+            properties:
+              email:
+                type: string
+              password:
+                type: string
       responses:
         '200':
           description: OK
@@ -177,6 +312,10 @@ paths:
                   type: string
                   example: 'string (hash)'
                 username:
+                  type: string
+                first_name:
+                  type: string
+                last_name:
                   type: string
                 email:
                   type: string
@@ -196,29 +335,34 @@ paths:
                   example: 'string (URL)'
         '401':
           description: Unauthorized
-  '/users/{id}':
+  /apps/{id}/users/{user_id}:
     get:
-      summary: Get a user by ID
+      summary: Get app user by ID
       tags:
         - Users
       parameters:
         - in: path
           name: id
+          description: App ID
+          type: string
+          required: true
+        - in: path
+          name: user_id
           description: User ID
           type: string
           required: true
+        - in: header
+          name: authorization
+          description: API Key
+          type: string
+          required: true
+          value: Bearer <API_KEY>
         - in: header
           name: cookie
           type: string
           required: true
           description: Authentication cookie from login
           value: conn.sid=abcdef1234567890
-        - in: header
-          name: authorization
-          description: API Key
-          type: string
-          required: true
-          value: Bearer d5f5c5e5a9bc9b714f263b11f63c7bdf
       responses:
         '200':
           description: OK
@@ -229,6 +373,10 @@ paths:
                 type: string
                 example: 'string (hash)'
               username:
+                type: string
+              first_name:
+                type: string
+              last_name:
                 type: string
               email:
                 type: string
@@ -251,12 +399,17 @@ paths:
         '404':
           description: Not Found
     patch:
-      summary: Update a user by ID
+      summary: Update app user by ID
       tags:
         - Users
       parameters:
         - in: path
           name: id
+          description: App ID
+          type: string
+          required: true  
+        - in: path
+          name: user_id
           description: User ID
           type: string
           required: true
@@ -307,12 +460,17 @@ paths:
         '404':
           description: Not Found
     delete:
-      summary: Delete a user by ID
+      summary: Delete app user by ID
       tags:
         - Users
       parameters:
         - in: path
           name: id
+          description: App ID
+          type: string
+          required: true  
+        - in: path
+          name: user_id
           description: User ID
           type: string
           required: true
@@ -335,6 +493,74 @@ paths:
           description: Unauthorized
         '404':
           description: Not Found
+  /apps/{id}/passwords/reset:
+    post:
+      summary: Reset user password
+      tags:
+        - 2FA
+      parameters:
+        - in: path
+          name: id
+          description: App ID
+          type: string
+          required: true  
+        - in: body
+          name: email
+          description: Email
+          required: true
+          schema:
+            type: object
+            properties:
+              email:
+                type: string
+        - in: header
+          name: authorization
+          description: API Key
+          type: string
+          required: true
+          value: Bearer <API_KEY>
+      responses:
+        '200':
+          description: OK - (Sends 2FA code email)
+        '401':
+          description: Unauthorized
+  /apps/{id}/passwords/verify:
+    post:
+      summary: Validate 2FA code 
+      tags:
+        - 2FA
+      parameters:
+        - in: path
+          name: id
+          description: App ID
+          type: string
+          required: true  
+        - in: body
+          name: email
+          description: Email
+          required: true
+          schema:
+            type: object
+            properties:
+              app_id:
+                type: string
+              email:
+                type: string
+              code:
+                type: string
+                pattern: '^[0-9]{6}$'
+                description: 6-digit 2FA code
+        - in: header
+          name: authorization
+          description: API Key
+          type: string
+          required: true
+          value: Bearer <API_KEY>
+      responses:
+        '301':
+          description: OK - (Redirects to /login)
+        '401':
+          description: Unauthorized
   /utils/{service}:
     get:
       summary: Generate data using a service
@@ -352,6 +578,7 @@ paths:
           schema:
             type: string
             example: 'd5f5c5e5a9bc9b714f263b11f63c7bdf'
+  /utils/{service}/{value}?:
     post:
       summary: Transform data using a service
       tags:
@@ -363,6 +590,9 @@ paths:
           enum: [encrypt, hash]
           value: hash
           required: true
+        - in: path
+          name: value
+          type: string
         - in: body
           name: values
           schema:
@@ -371,10 +601,34 @@ paths:
               '[custom_key]':
                 type: string
                 example: 'random_value'
-          required: true
       responses:
         '200':
           description: OK
           schema:
             type: string
             example: '$2b$10$U6NOrsGLsGjPZ56AdfOyx.E1RzAD1Z.KMjZo3YX0Q.DJxrp1nVE7O'
+  /secrets:
+      get:
+        summary: Get ENV vars
+        tags:
+          - Admin
+        parameters:
+          - in: body
+            name: credentials
+            description: Admin login credentials
+            required: true
+            schema:
+              type: object
+              properties:
+                email:
+                  type: string
+                password:
+                  type: string
+        responses:
+          '200':
+            description: OK
+            schema:
+              type: string
+              value: JSON<env_vars>
+          '401':
+            description: Unauthorized
