--- a/new.env
+++ b/new.env
@@ -1,6 +1,7 @@
 NODE_ENV=development
 PORT=8000
-API_KEY= <API_KEY>
-PROD_DB_URL= <PROD_DB_URL>
 DEV_DB_URL=postgresql://postgres:postgres@localhost:54322/postgres
+PROD_DB_URL= <PROD_DB_URL>
+API_KEY= <API_KEY>
 ADMIN_PASSWORD= <ADMIN_PASSWORD>
+SENDGRID_API_KEY= <SENDGRID_API_KEY>
