--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "pg": "^8.10.0",
     "pino": "^8.11.0",
     "pino-pretty": "^10.0.0",
+    "supabase": "^1.50.14",
     "swagger-ui-express": "^4.6.2",
     "uuid": "^9.0.0"
   },
