mock data adjustments

--- a/src/docs.yaml
+++ b/src/docs.yaml
@@ -22,7 +22,7 @@ paths:
             properties:
               owner:
                 type: string
-                example: 'Tec3, LLC'
+                example: 'Dionis Gonzalez'
               ok:
                 type: boolean
               message:
