DB backups with Backblaze and cron scheduler

--- a/package.json
+++ b/package.json
@@ -15,18 +15,19 @@
     "migrations:reset": "npm run migrations:rollback && npm run migrations",
     "rollback": "npm run migrations:rollback",
     "reset": "npm run migrations:reset && npm run seeds",
-    "seeds": "knex --knexfile src/db/knexfile.js seed:run",
+    "seeds": "knex --knexfile src/db/knexfile.js seed:run && mv ",
     "seeds:create": "knex --knexfile src/db/knexfile.js seed:make",
     "login": "npx supabase login",
     "db:pull": "npx supabase db remote commit",
     "db:start": "npx supabase start",
     "db:stop": "npx supabase stop",
     "db:reset": "npx supabase db reset",
+    "db:backup": "src/db/backup/index.sh",
     "setup": "npm run db:pull && npm run db:start && npm run reset && source src/aliases.sh",
-    "setup:alias": "source src/aliases.sh",
     "setup:aliases": "source src/aliases.sh"
   },
   "dependencies": {
+    "backblaze-b2": "^1.7.0",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
@@ -39,6 +40,7 @@
     "js-yaml": "^4.1.0",
     "knex": "^2.4.2",
     "morgan": "^1.10.0",
+    "node-cron": "^3.0.2",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "pg": "^8.10.0",
