gpt + conversations tables and seeding

--- a/new.env
+++ b/new.env
@@ -5,3 +5,6 @@ PROD_DB_URL= <PROD_DB_URL>
 API_KEY= <API_KEY>
 ADMIN_PASSWORD= <ADMIN_PASSWORD>
 SENDGRID_API_KEY= <SENDGRID_API_KEY>
+BACKBLAZE_APP_ID= <BACKBLAZE_APP_ID>
+BACKBLAZE_APP_KEY_ID= <BACKBLAZE_APP_KEY_ID>
+BACKBLAZE_BUCKET_ID= <BACKBLAZE_BUCKET_ID>
