--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "knex": "^2.4.2",
     "morgan": "^1.10.0",
     "node-cron": "^3.0.2",
+    "openai": "^3.2.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "pg": "^8.10.0",
