--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "openai": "^3.2.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
+    "path": "^0.12.7",
     "pg": "^8.10.0",
     "pino": "^8.11.0",
     "pino-pretty": "^10.0.0",
