--- a/new.env
+++ b/new.env
@@ -8,3 +8,4 @@ SENDGRID_API_KEY= <SENDGRID_API_KEY>
 BACKBLAZE_APP_ID= <BACKBLAZE_APP_ID>
 BACKBLAZE_APP_KEY_ID= <BACKBLAZE_APP_KEY_ID>
 BACKBLAZE_BUCKET_ID= <BACKBLAZE_BUCKET_ID>
+OPENAI_API_KEY= <OPENAI_API_KEY>
