--- a/new.env
+++ b/new.env
@@ -9,3 +9,7 @@ BACKBLAZE_APP_ID= <BACKBLAZE_APP_ID>
 BACKBLAZE_APP_KEY_ID= <BACKBLAZE_APP_KEY_ID>
 BACKBLAZE_BUCKET_ID= <BACKBLAZE_BUCKET_ID>
 OPENAI_API_KEY= <OPENAI_API_KEY>
+SLACK_GPTEAMS_DM_TOKEN= <SLACK_GPTEAMS_DM_TOKEN>
+SLACK_GPTEAMS_BOT_ID= <SLACK_GPTEAMS_BOT_ID>
+SLACK_GPTEAMS_BOT_CHANNEL= <SLACK_GPTEAMS_BOT_CHANNEL>
+SLACK_GPTEAMS_ADMIN_ID= <SLACK_GPTEAMS_ADMIN_ID>
