--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
   "dependencies": {
     "backblaze-b2": "^1.7.0",
     "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.2",
+    "connect-redis": "^7.0.1",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "express": "^4.18.2",
@@ -41,6 +43,7 @@
     "knex": "^2.4.2",
     "morgan": "^1.10.0",
     "node-cron": "^3.0.2",
+    "node-fetch": "^2.6.9",
     "openai": "^3.2.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
