--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -1,6 +1,6 @@
 # A string used to distinguish different Supabase projects on the same host. Defaults to the working
 # directory name when running `supabase init`.
-project_id = "backend-template"
+project_id = "tec3-api"
 
 [api]
 # Port to use for the API URL.
