--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
+    "redis": "redis-server",
+    "redis:close": "redis-cli shutdown",
     "migrations": "knex --knexfile src/db/knexfile.js migrate:latest",
     "migrations:create": "knex --knexfile src/db/knexfile.js migrate:make",
     "migrations:rollback": "knex --knexfile src/db/knexfile.js migrate:rollback --all",
