--- a/src/docs.yaml
+++ b/src/docs.yaml
@@ -126,7 +126,7 @@ paths:
           description: Unauthorized
         '404':
           description: Not Found
-  /apps/{id}/register:
+  /{app_id}/register:
     post:
       summary: Create app user account
       tags:
@@ -213,7 +213,7 @@ paths:
           description: Bad Request
         '401':
           description: Unauthorized
-  /apps/{id}/login:
+  /{app_id}/login:
     post:
       summary: Login to app
       tags:
@@ -250,7 +250,7 @@ paths:
               type: string
         '401':
           description: Unauthorized
-  /apps{id}/logout:
+  /{app_id}/logout:
     post:
         summary: Logout from app
         tags:
@@ -278,7 +278,7 @@ paths:
             description: OK - (Removes cookie from session)
           '401':
             description: Unauthorized
-  /apps/{id}/users:
+  /{app_id}/users:
     get:
       summary: Get all users from app
       tags:
@@ -335,7 +335,7 @@ paths:
                   example: 'string (URL)'
         '401':
           description: Unauthorized
-  /apps/{id}/users/{user_id}:
+  /{app_id}/users/{user_id}:
     get:
       summary: Get app user by ID
       tags:
@@ -493,7 +493,412 @@ paths:
           description: Unauthorized
         '404':
           description: Not Found
-  /apps/{id}/passwords/reset:
+  /{app_id}/conversations:
+    parameters:
+        - in: path
+          name: app_id
+          description: App ID
+          type: string
+          required: true              
+        - in: header
+          name: authorization
+          description: API Key
+          type: string
+          required: true
+          value: Bearer <API_KEY>
+        - in: header
+          name: cookie
+          type: string
+          required: true
+          description: Authentication cookie from login
+          value: conn.sid=abcdef1234567890
+    get:
+      summary: Get all conversations
+      tags:
+        - Conversations
+      responses:
+        '200':
+          description: OK
+          schema:
+            type: array
+            items:
+              type: object
+              properties:
+                id:
+                  type: string
+                  example: 'string (hash)'
+                title:
+                  type: string
+                created_by:
+                  type: string
+                  example: 'string (hash)'
+                type:
+                  type: string
+                  enum: ['single', 'group']
+                slack_channel:
+                  type: string
+                slack_ts:
+                  type: string
+                created_at:
+                  type: string
+                  format: date
+                updated_at:
+                  type: string
+                  format: date
+                archived_at:
+                  type: string
+                  format: date
+        '404':
+          description: Not found
+        '500':
+          description: Internal server error
+  /{app_id}/conversations/{id}:
+    parameters:
+      - in: path
+        name: app_id
+        description: App ID
+        type: string
+        required: true              
+      - in: path
+        name: id
+        description: Conversation ID
+        type: string
+        required: true              
+      - in: header
+        name: authorization
+        description: API Key
+        type: string
+        required: true
+        value: Bearer <API_KEY>
+      - in: header
+        name: cookie
+        type: string
+        required: true
+        description: Authentication cookie from login
+        value: conn.sid=abcdef1234567890
+    get:
+      summary: Get a conversation by ID
+      tags:
+        - Conversations
+      responses:
+        '200':
+          description: OK
+          schema:
+            type: object
+            properties:
+              id:
+                type: string
+                example: 'string (hash)'
+              title:
+                type: string
+              created_by:
+                type: string
+                example: 'string (hash)'
+              type:
+                type: string
+                enum: ['single', 'group']
+              slack_channel:
+                type: string
+              slack_ts:
+                type: string
+              created_at:
+                type: string
+                format: date
+              updated_at:
+                type: string
+                format: date
+              archived_at:
+                type: string
+                format: date
+        '404':
+          description: Not found
+        '500':
+          description: Internal server error
+    patch:
+      summary: Update a conversation by ID
+      tags:
+        - Conversations
+      parameters:
+        - in: path
+          name: app_id
+          description: App ID
+          type: string
+          required: true              
+        - in: header
+          name: authorization
+          description: API Key
+          type: string
+          required: true
+          value: Bearer <API_KEY>
+        - in: header
+          name: cookie
+          type: string
+          required: true
+          description: Authentication cookie from login
+          value: conn.sid=abcdef1234567890
+        - in: body
+          name: credentials
+          description: Login credentials
+          required: true
+          schema:
+            type: object
+            properties:
+              id:
+                type: string
+                example: 'string (hash)'
+              title:
+                type: string
+              created_by:
+                type: string
+                example: 'string (hash)'
+              type:
+                type: string
+                enum: ['single', 'group']
+              slack_channel:
+                type: string
+              slack_ts:
+                type: string
+              created_at:
+                type: string
+                format: date
+              updated_at:
+                type: string
+                format: date
+              archived_at:
+                type: string
+                format: date
+      responses:
+        '200':
+          description: OK
+          schema:
+            type: object
+            properties:
+              id:
+                type: string
+                example: 'string (hash)'
+              title:
+                type: string
+              created_by:
+                type: string
+                example: 'string (hash)'
+              type:
+                type: string
+                enum: ['single', 'group']
+              slack_channel:
+                type: string
+              slack_ts:
+                type: string
+              created_at:
+                type: string
+                format: date
+              updated_at:
+                type: string
+                format: date
+              archived_at:
+                type: string
+                format: date
+        '404':
+          description: Not found
+        '500':
+          description: Internal server error
+    delete:
+      summary: Delete a conversation by ID
+      tags:
+        - Conversations
+      responses:
+        '204':
+          description: No Content
+        '404':
+          description: 404
+  /{app_id}/messages:
+    parameters:
+        - name: app_id
+          description: App ID
+          in: path
+          required: true
+          schema:
+            type: string
+        - in: header
+          name: authorization
+          description: API Key
+          type: string
+          required: true
+          value: Bearer <API_KEY>
+        - in: header
+          name: cookie
+          type: string
+          required: true
+          description: Authentication cookie from login
+          value: conn.sid=abcdef1234567890
+    get:
+      summary: Get all messages
+      tags:
+        - Messages
+      responses:
+        '200':
+          description: OK
+          schema:
+            type: array
+            items:
+              type: object
+              properties:
+                id:
+                  type: string
+                  example: 'string (hash)'
+                conversation_id:
+                  type: string
+                  example: 'string (hash)'
+                content:
+                  type: string
+                user_id:
+                  type: string
+                  example: 'string (hash)'
+                created_at:
+                  type: string
+                  format: date
+                updated_at:
+                  type: string
+                  format: date
+                archived_at:
+                  type: string
+                  format: date
+        '404':
+          description: Not found
+  /{app_id}/messages/{id}:
+    parameters:
+      - name: app_id
+        in: path
+        required: true
+        schema:
+          type: string
+      - name: id
+        in: path
+        schema:
+          type: string
+      - in: header
+        name: authorization
+        description: API Key
+        type: string
+        required: true
+        value: Bearer <API_KEY>
+      - in: header
+        name: cookie
+        type: string
+        required: true
+        description: Authentication cookie from login
+        value: conn.sid=abcdef1234567890
+    get:
+      summary: Get a message by ID
+      tags:
+        - Messages
+      responses:
+        '200':
+          description: OK
+          schema:
+            type: object
+            properties:
+              id:
+                type: string
+                example: 'string (hash)'
+              conversation_id:
+                type: string
+                example: 'string (hash)'
+              content:
+                type: string
+              user_id:
+                type: string
+                example: 'string (hash)'
+              created_at:
+                type: string
+                format: date
+              updated_at:
+                type: string
+                format: date
+              archived_at:
+                type: string
+                format: date
+        '404':
+          description: Not found
+        '500':
+          description: Internal server error
+    patch:
+      summary: Update message by ID
+      tags:
+        - Messages
+      parameters:
+        - in: body
+          name: credentials
+          description: Login credentials
+          required: true
+          schema:
+            type: object
+            properties:
+              id:
+                type: string
+                example: 'string (hash)'
+              title:
+                type: string
+              created_by:
+                type: string
+                example: 'string (hash)'
+              type:
+                type: string
+                enum: ['single', 'group']
+              slack_channel:
+                type: string
+              slack_ts:
+                type: string
+              created_at:
+                type: string
+                format: date
+              updated_at:
+                type: string
+                format: date
+              archived_at:
+                type: string
+                format: date
+      responses:
+        '200':
+          description: OK
+          schema:
+            type: object
+            properties:
+              id:
+                type: string
+                example: 'string (hash)'
+              conversation_id:
+                type: string
+                example: 'string (hash)'
+              content:
+                type: string
+              user_id:
+                type: string
+                example: 'string (hash)'
+              created_at:
+                type: string
+                format: date
+              updated_at:
+                type: string
+                format: date
+              archived_at:
+                type: string
+                format: da
+        '404':
+          description: Not found
+        '500':
+          description: Internal server error
+    delete:
+      summary: Delete a message by ID
+      tags:
+        - Messages
+      responses:
+        '200':
+          description: OK
+        '404':
+          description: Not found
+        '500':
+          description: Internal server error
+  /{app_id}/passwords/reset:
     post:
       summary: Reset user password
       tags:
@@ -524,7 +929,7 @@ paths:
           description: OK - (Sends 2FA code email)
         '401':
           description: Unauthorized
-  /apps/{id}/passwords/verify:
+  /{app_id}/passwords/verify:
     post:
       summary: Validate 2FA code 
       tags:
@@ -561,33 +966,133 @@ paths:
           description: OK - (Redirects to /login)
         '401':
           description: Unauthorized
+  /promptwiz:
+    post:
+      summary: Send original prompt
+      tags:
+        - PromptWiz
+      responses:
+        '200':
+          description: OK
+          schema:
+            type: string
+            value: <enhanced_prompt>
+        '400':
+          description: Bad Request
+        '500':
+          description: Internal server error
+  /groupgpt:
+    post:
+      summary: Get all user conversations and messages
+      tags:
+        - GroupGPT
+      responses:
+        '200':
+          description: OK
+          schema:
+            type: array
+            items:
+              type: object
+              properties:
+                id:
+                  type: string
+                  example: 'string (hash)'
+                title:
+                  type: string
+                created_by:
+                  type: string
+                  example: 'string (hash)'
+                type:
+                  type: string
+                  enum: ['single', 'group']
+                slack_channel:
+                  type: string
+                slack_ts:
+                  type: string
+                created_at:
+                  type: string
+                  format: date
+                updated_at:
+                  type: string
+                  format: date
+                archived_at:
+                  type: string
+                  format: date
+                messages:
+                  type: array
+                  items:
+                    type: object
+                    properties:
+                      id:
+                        type: string
+                        example: 'string (hash)'
+                      text:
+                        type: string
+                      created_by:
+                        type: string
+                        example: 'string (hash)'
+                      created_at:
+                        type: string
+                        format: date
+                      updated_at:
+                        type: string
+                        format: date
+        '400':
+          description: Bad Request
+        '500':
+          description: Internal server error
+  /gpteams:
+    post:
+      summary: Prompt ChatGPT (GPT-3.5-Turbo)
+      tags:
+        - GPTeams - (Slack)
+    responses:
+      '202':
+        description: Accepted
+      '400':
+        description: Bad Request
+      '404':
+        description: Not Found
+      '500':
+        description: Internal server error
+  /gpteams/dalle:
+    post:
+      summary: Prompt DALL-E 2
+      tags:
+        - GPTeams - (Slack)
+      responses:
+        '200':
+          description: Accepted
+        '404':
+          description: Not Found
+        '500':
+          description: Internal server error
   /utils/{service}:
     get:
-      summary: Generate data using a service
+      summary: 'Service: Generate a random value'
       tags:
         - Utils
       parameters:
         - in: path
           name: service
           type: string
-          enum: [encrypt, hash]
-          required: true
+          enum: [encrypt, hash, uuid]
       responses:
         '200':
           description: OK
           schema:
             type: string
             example: '<API_KEY>'
-  /utils/{service}/{value}?:
+  /utils/{service}/{value}:
     post:
-      summary: Transform data using a service
+      summary: 'Service: Transform data using a service'
       tags:
         - Utils
       parameters:
         - in: path
           name: service
           type: string
-          enum: [encrypt, hash]
+          enum: [encrypt, hash, uuid]
           value: hash
           required: true
         - in: path
