deleting local cache implementation for gpteams

--- a/new.env
+++ b/new.env
@@ -22,3 +22,4 @@ STATUSPAGE_API_KEY= <STATUSPAGE_API_KEY>
 STATUSPAGE_PAGE_ID= <STATUSPAGE_PAGE_ID>
 STATUSPAGE_TEC3_API_ID= <STATUSPAGE_TEC3_API_ID>
 STATUSPAGE_GPTEAMS_ID= <STATUSPAGE_GPTEAMS_ID>
+STATUSPAGE_URL= <STATUSPAGE_URL>
