--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "backend-template",
+  "name": "tec3-api",
   "description": "",
   "version": "1.0.0",
   "main": "server.js",
@@ -34,7 +34,6 @@
     "body-parser": "^1.20.2",
     "connect-redis": "^7.0.1",
     "cors": "^2.8.5",
-    "crypto": "^1.0.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "express-xss-sanitizer": "^1.1.6",
