--- a/new.env
+++ b/new.env
@@ -5,19 +5,17 @@ PROD_DB_URL= <PROD_DB_URL>
 API_KEY= <API_KEY>
 ADMIN_PASSWORD= <ADMIN_PASSWORD>
 SENDGRID_API_KEY= <SENDGRID_API_KEY>
-BACKBLAZE_APP_ID= <BACKBLAZE_APP_ID>
-BACKBLAZE_APP_KEY_ID= <BACKBLAZE_APP_KEY_ID>
+BACKBLAZE_APPLICATION_KEY_ID= <BACKBLAZE_APPLICATION_KEY_ID>
+BACKBLAZE_APPLICATION_KEY= <BACKBLAZE_APPLICATION_KEY>
 BACKBLAZE_BUCKET_ID= <BACKBLAZE_BUCKET_ID>
 OPENAI_API_KEY= <OPENAI_API_KEY>
+SLACK_GPTEAMS_LILI_ID= <SLACK_GPTEAMS_LILI_ID>
+SLACK_GPTEAMS_DOUG_ID= <SLACK_GPTEAMS_DOUG_ID>
 SLACK_GPTEAMS_DIO_ID= <SLACK_GPTEAMS_DIO_ID>
 SLACK_GPTEAMS_ADMIN_TOKEN= <SLACK_GPTEAMS_ADMIN_TOKEN>
 SLACK_GPTEAMS_DM_TOKEN= <SLACK_GPTEAMS_DM_TOKEN>
 SLACK_GPTEAMS_BOT_ID= <SLACK_GPTEAMS_BOT_ID>
 SLACK_GPTEAMS_BOT_CHANNEL= <SLACK_GPTEAMS_BOT_CHANNEL>
-SLACK_GPT4TEAMS_ADMIN_TOKEN= <SLACK_GPT4TEAMS_ADMIN_TOKEN>
-SLACK_GPT4TEAMS_DM_TOKEN= <SLACK_GPT4TEAMS_DM_TOKEN>
-SLACK_GPT4TEAMS_BOT_ID= <SLACK_GPT4TEAMS_BOT_ID>
-SLACK_GPT4TEAMS_BOT_CHANNEL= <SLACK_GPT4TEAMS_BOT_CHANNEL>
 STATUSPAGE_API_KEY= <STATUSPAGE_API_KEY>
 STATUSPAGE_PAGE_ID= <STATUSPAGE_PAGE_ID>
 STATUSPAGE_TEC3_API_ID= <STATUSPAGE_TEC3_API_ID>
