--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "migrations:reset": "npm run migrations:rollback && npm run migrations",
     "rollback": "npm run migrations:rollback",
     "reset": "npm run migrations:reset && npm run seeds",
-    "seeds": "knex --knexfile src/db/knexfile.js seed:run && mv ",
+    "seeds": "knex --knexfile src/db/knexfile.js seed:run",
     "seeds:create": "knex --knexfile src/db/knexfile.js seed:make",
     "login": "npx supabase login",
     "db:pull": "npx supabase db remote commit",
@@ -41,6 +41,7 @@
     "helmet": "^6.1.5",
     "joi": "^17.9.1",
     "js-yaml": "^4.1.0",
+    "jsonwebtoken": "^9.0.0",
     "knex": "^2.4.2",
     "morgan": "^1.10.0",
     "node-cron": "^3.0.2",
