new.env adjustments

--- a/new.env
+++ b/new.env
@@ -1,14 +1,15 @@
-NODE_ENV=development
-PORT=8000
-DEV_DB_URL=postgresql://postgres:postgres@localhost:54322/postgres
-PROD_DB_URL= <PROD_DB_URL>
+NODE_ENV= <NODE_ENV>
+PORT= <PORT>
 API_KEY= <API_KEY>
+PROD_DB_URL= <PROD_DB_URL>
+DEV_DB_URL= <DEV_DB_URL>
+ADMIN_EMAIL= <ADMIN_EMAIL>
 ADMIN_PASSWORD= <ADMIN_PASSWORD>
+OPENAI_API_KEY= <OPENAI_API_KEY>
 SENDGRID_API_KEY= <SENDGRID_API_KEY>
 BACKBLAZE_APPLICATION_KEY_ID= <BACKBLAZE_APPLICATION_KEY_ID>
 BACKBLAZE_APPLICATION_KEY= <BACKBLAZE_APPLICATION_KEY>
 BACKBLAZE_BUCKET_ID= <BACKBLAZE_BUCKET_ID>
-OPENAI_API_KEY= <OPENAI_API_KEY>
 SLACK_GPTEAMS_LILI_ID= <SLACK_GPTEAMS_LILI_ID>
 SLACK_GPTEAMS_DOUG_ID= <SLACK_GPTEAMS_DOUG_ID>
 SLACK_GPTEAMS_DIO_ID= <SLACK_GPTEAMS_DIO_ID>
@@ -21,3 +22,5 @@ STATUSPAGE_PAGE_ID= <STATUSPAGE_PAGE_ID>
 STATUSPAGE_TEC3_API_ID= <STATUSPAGE_TEC3_API_ID>
 STATUSPAGE_GPTEAMS_ID= <STATUSPAGE_GPTEAMS_ID>
 STATUSPAGE_URL= <STATUSPAGE_URL>
+JWT_ACCESS_SECRET= <JWT_ACCESS_SECRET>
+JWT_REFRESH_SECRET= <JWT_REFRESH_SECRET>
