--- a/new.env
+++ b/new.env
@@ -5,7 +5,7 @@ PROD_DB_URL= <PROD_DB_URL>
 DEV_DB_URL= <DEV_DB_URL>
 ADMIN_EMAIL= <ADMIN_EMAIL>
 ADMIN_PASSWORD= <ADMIN_PASSWORD>
-OPENAI_API_KEY= <OPENAI_API_KEY>
+PROMPTWIZ_OPENAI_API_KEY= <PROMPTWIZ_OPENAI_API_KEY>
 SENDGRID_API_KEY= <SENDGRID_API_KEY>
 BACKBLAZE_APPLICATION_KEY_ID= <BACKBLAZE_APPLICATION_KEY_ID>
 BACKBLAZE_APPLICATION_KEY= <BACKBLAZE_APPLICATION_KEY>
