--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "express-xss-sanitizer": "^1.1.6",
+    "form-data": "^4.0.0",
     "fs": "^0.0.1-security",
     "google-auth-library": "^8.8.0",
     "helmet": "^6.1.5",
@@ -44,6 +45,7 @@
     "js-yaml": "^4.1.0",
     "jsonwebtoken": "^9.0.0",
     "knex": "^2.4.2",
+    "mailgun.js": "^9.1.0",
     "morgan": "^1.10.0",
     "node-cron": "^3.0.2",
     "node-fetch": "^2.6.9",
