--- a/new.env
+++ b/new.env
@@ -19,7 +19,7 @@ SLACK_GPTEAMS_BOT_ID= <SLACK_GPTEAMS_BOT_ID>
 SLACK_GPTEAMS_BOT_CHANNEL= <SLACK_GPTEAMS_BOT_CHANNEL>
 STATUSPAGE_API_KEY= <STATUSPAGE_API_KEY>
 STATUSPAGE_PAGE_ID= <STATUSPAGE_PAGE_ID>
-STATUSPAGE_TEC3_API_ID= <STATUSPAGE_TEC3_API_ID>
+STATUSPAGE_ADMIN_API_ID= <STATUSPAGE_ADMIN_API_ID>
 STATUSPAGE_GPTEAMS_ID= <STATUSPAGE_GPTEAMS_ID>
 STATUSPAGE_URL= <STATUSPAGE_URL>
 JWT_ACCESS_SECRET= <JWT_ACCESS_SECRET>
